BoxLayout update with both python and kivy file

--- a/theLab.kv
+++ b/theLab.kv
@@ -1,4 +1,12 @@
-MainWidget:
+BoxLayoutExample:
+<BoxLayoutExample>:
+    orientation: 'vertical'
+    Button:
+        text: "A"
+    Button:
+        text: "B"
+    Label:
+        text: "C"
 
 <MainWidget>: 
     Button:
@@ -13,3 +21,4 @@ MainWidget:
         size: "40dp","40dp"
         pos:  "200dp","300dp"
         color: 1,0,0,1
+
